# TaskWeave

./: .dockerignore  .gitignore  BUILD_SUMMARY.md  DEMO_SCRIPT.md  QUICKSTART.md  README.md  README_IMPROVEMENTS.md  VERIFICATION_CHECKLIST.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/adapters/: __init__.py  anthropic_client.py  composio_client.py  elastic_logger.py  fetch_client.py  letta_client.py
backend/app/models/: domain.py  dto.py  events.py
backend/app/router/: agents.py  health.py  llm.py  memory.py  tools.py  websocket.py
backend/app/services/: event_bus.py  orchestrator.py  planner.py  timeline.py
backend/app/tests/: test_orchestrator.py  test_planner.py  test_routes.py
backend/app/util/: errors.py  ids.py  logging.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/: AgentCard.tsx  MemoryPanel.tsx  Terminal.tsx  Timeline.tsx  Toast.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/styles/: index.css
frontend/src/tests/: App.test.tsx  setup.ts
